WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75372
ListHashSetReverseIterator compilation error
https://bugs.webkit.org/show_bug.cgi?id=75372
Summary
ListHashSetReverseIterator compilation error
Xianzhu Wang
Reported
2011-12-29 15:38:33 PST
Using ListHashSetReverseIterator causes the following compilation error: third_party/WebKit/Source/JavaScriptCore/wtf/ListHashSet.h:319: error: 'WTF::ListHashSetConstIterator<ValueArg, inlineCapacity, HashArg>::ListHashSetConstIterator(const WTF::ListHashSet<Value, inlineCapacity, HashFunctions>*, WTF::ListHashSetNode<ValueArg, inlineCapacity>*) [with ValueArg = int, unsigned int inlineCapacity = 256u, HashArg = WTF::IntHash<unsigned int>]' is private third_party/WebKit/Source/JavaScriptCore/wtf/ListHashSet.h:387: error: within this context There is a typo in class ListHashSetReverseIterator: typedef ListHashSetConstIterator<ValueArg, inlineCapacity, HashArg> const_reverse_iterator; Should be typedef ListHashSetConstReverseIterator<ValueArg, inlineCapacity, HashArg> const_reverse_iterator;
Attachments
patch
(1.66 KB, patch)
2011-12-29 15:49 PST
,
Xianzhu Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xianzhu Wang
Comment 1
2011-12-29 15:49:47 PST
Created
attachment 120770
[details]
patch
WebKit Review Bot
Comment 2
2012-01-08 23:19:01 PST
Comment on
attachment 120770
[details]
patch Clearing flags on attachment: 120770 Committed
r104436
: <
http://trac.webkit.org/changeset/104436
>
WebKit Review Bot
Comment 3
2012-01-08 23:19:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug